test/bad/classes/method08.px

class A def
    func f(): Int def
        return 0

f: A->Int = A().f
